[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Art/ParalaxBackground/Parallax Backround 2/parallax-space-stars.png" type="Texture" id=2]
[ext_resource path="res://Art/ParalaxBackground/Parallax Backround 2/parallax-space-ring-planet.png" type="Texture" id=3]
[ext_resource path="res://Art/ParalaxBackground/Parallax Backround 2/parallax-space-far-planets.png" type="Texture" id=4]
[ext_resource path="res://Art/ParalaxBackground/Parallax Backround 2/parallax-space-big-planet.png" type="Texture" id=5]
[ext_resource path="res://Art/ParalaxBackground/preview.png" type="Texture" id=6]
[ext_resource path="res://Fonts/SpaceQuest-yOY3.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Art/Controls/icons8-circled-d-50.png" type="Texture" id=8]
[ext_resource path="res://Art/Controls/icons8-left-click-50.png" type="Texture" id=9]
[ext_resource path="res://Art/Controls/icons8-circled-w-50.png" type="Texture" id=10]
[ext_resource path="res://Art/Controls/icons8-circled-a-50.png" type="Texture" id=11]
[ext_resource path="res://Art/PermanentMarker-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Art/ButtonStyleHover.tres" type="StyleBox" id=13]
[ext_resource path="res://Art/ButtonStyle.tres" type="StyleBox" id=14]
[ext_resource path="res://Art/ButtonStylePressed.tres" type="StyleBox" id=15]
[ext_resource path="res://Sprites/Space Cadet Sprite Sheet.png" type="Texture" id=16]
[ext_resource path="res://Art/Controls/icons8-esc-mac-50.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 5.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovingBG" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="MovingBG"]
follow_viewport_scale = 0.001

[node name="ParallaxLayer5" type="ParallaxLayer" parent="MovingBG/ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="MovingBG/ParallaxBackground/ParallaxLayer5"]
position = Vector2( 66.8258, 132.897 )
scale = Vector2( 5, 5 )
z_index = -2
texture = ExtResource( 2 )
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="MovingBG/ParallaxBackground"]
scale = Vector2( 15, 15 )
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="MovingBG/ParallaxBackground/ParallaxLayer"]
position = Vector2( 0.201088, -0.231035 )
texture = ExtResource( 6 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="MovingBG/ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="MovingBG/ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1301.34, 194.968 )
scale = Vector2( 6, 6 )
texture = ExtResource( 5 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="MovingBG/ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.3 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="MovingBG/ParallaxBackground/ParallaxLayer3"]
position = Vector2( 205.055, 155.045 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="MovingBG/ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="MovingBG/ParallaxBackground/ParallaxLayer4"]
position = Vector2( 620.813, 457.006 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
centered = false

[node name="Title" type="Label" parent="."]
margin_left = 390.314
margin_top = 67.7982
margin_right = 1539.31
margin_bottom = 158.798
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "Ranger Rick: Space Splunker"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.807843 )
margin_left = 80.8367
margin_top = 564.038
margin_right = 577.837
margin_bottom = 880.038
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Mouse_LClick" type="TextureRect" parent="Controls"]
margin_left = 373.748
margin_top = 156.227
margin_right = 451.748
margin_bottom = 250.226
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Controls/Mouse_LClick"]
margin_left = 6.0
margin_top = -49.0
margin_right = 78.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Shoot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D_Key" type="TextureRect" parent="Controls"]
margin_left = 235.991
margin_top = 210.108
margin_right = 285.991
margin_bottom = 260.108
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Controls/D_Key"]
margin_left = -3.6803
margin_top = -81.6202
margin_right = 68.3197
margin_bottom = -8.62018
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Move Right"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_Key" type="TextureRect" parent="Controls"]
margin_left = 55.3638
margin_top = 211.309
margin_right = 105.364
margin_bottom = 261.309
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Controls/A_Key"]
margin_left = -28.0793
margin_top = -76.0
margin_right = 67.9207
margin_bottom = -3.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Move Left"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W_Key" type="TextureRect" parent="Controls"]
margin_left = 144.717
margin_top = 151.794
margin_right = 194.717
margin_bottom = 201.794
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Controls/W_Key"]
margin_left = -9.20044
margin_top = -53.0239
margin_right = 62.7996
margin_bottom = -15.0239
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Esc_Key" type="TextureRect" parent="Controls"]
margin_left = 2.12134
margin_top = 5.65686
margin_right = 66.1213
margin_bottom = 70.6569
texture = ExtResource( 17 )
expand = true

[node name="Label3" type="Label" parent="Controls/Esc_Key"]
margin_left = 74.5338
margin_top = 13.08
margin_right = 146.534
margin_bottom = 51.08
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 799.773
margin_top = 552.064
margin_right = 1134.77
margin_bottom = 648.064
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 14 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_pressed = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 799.433
margin_top = 784.646
margin_right = 1133.43
margin_bottom = 867.646
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = ExtResource( 14 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_pressed = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 951.741, 336.38 )
scale = Vector2( 8, 8 )
texture = ExtResource( 16 )
hframes = 8
vframes = 5

[node name="Information" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.807843 )
margin_left = 1347.65
margin_top = 552.016
margin_right = 1844.65
margin_bottom = 868.016
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Information"]
margin_left = 33.0
margin_top = 14.0
margin_right = 476.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Objective: 

Help Pete find and steal all the treasure from each planet. You'll need to run, jump and shoot your way to a profitable finish! "
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
